# fxNET

./: .gitignore  CMakeLists.txt  README.md  fxupload.sh  gint.patch  installdev.sh  scif.patch
assets-fx/: fxconv-metadata.txt
assets-fx/fonts/: fxconv-metadata.txt
docs/: protocol.md
patches/: gint.patch
src/: common.h  keys.c  keys.h  main.c  serial.c  serial.h  ui.c  ui.h
